Installed the dependencies and made the intial webpage

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,24 @@
   box-sizing: border-box;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+
+  body {
+    background-image: url("/moon.png");
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    color: aliceblue;
+  }
+
+  .container{
+    width: 90vw;
+    height: 90vh;
+    background-color: rgba(19.6, 20.4, 28.2, 0.7);
+    backdrop-filter: blur(15px) saturate(180%);
+    border-radius: 12px;
+    border: 2px solid rgba(255, 255, 255, 0.10);
+  }
+  
 }
