--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
     backdrop-filter: blur(15px) saturate(180%);
     border-radius: 12px;
     border: 2px solid rgba(255, 255, 255, 0.10);
+    display: flex;
   }
   
 }
