--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -17,14 +17,16 @@
             display: flex;
             align-items: center;
             gap: 20px;
+            img{
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+                object-fit: cover;
+                border: 2px solid white;
+            }
         }
 
-        img{
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
+        
 
         .texts{
             display: flex;
