--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -59,6 +59,57 @@
     .center{
         padding: 20px;
         flex: 1;
+        overflow: scroll;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        .message{
+            max-width: 70%;
+            display: flex;
+            gap: 20px;
+
+            &.own{
+                align-self: flex-end;
+                
+                .texts{
+                    p{
+                        background-color: #751bbf;
+                    }
+                }
+            }
+
+            img{
+                width: 30px;
+                height: 30px;
+                border-radius: 50px;
+                object-fit: cover;
+            }
+
+            .texts{
+            
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 10px;
+                    object-fit: cover;
+                }
+
+                p{
+                    padding: 6px;
+                    background-color: rgba(17, 25, 40, 0.3);
+                    border-radius: 10px;
+                }
+
+                span{
+                    font-size: 10px;
+                }
+            }
+        }
     }
 
     .bottom{
