completed chat details (right most side)

--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -77,7 +77,7 @@
                 
                 .texts{
                     p{
-                        background-color: #751bbf;
+                        background-color: #5c1596;
                     }
                 }
             }
