--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -55,6 +55,7 @@
             img{
                 width: 20px;
                 height: 20px;
+                cursor: pointer;
             }
         }
     }
@@ -66,6 +67,7 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        position: relative;
 
         .message{
             max-width: 70%;
