--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -2,11 +2,11 @@
     flex: 0.8;
 
     .user{
-        padding: 30px 20px;
+        padding: 15px 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 20px;
+        gap: 15px;
         border-bottom: 1px solid#dddddd35;
 
         img{
@@ -22,8 +22,7 @@
         padding: 20px;
         display: flex;
         flex-direction: column;
-        gap: 30px;
-        height: 100vh;
+        gap: 25px;
 
         .option{
 
@@ -62,7 +61,7 @@
                             width: 40px;
                             height: 40px;
                             border-radius: 5px;
-                            object-fit: cpver;
+                            object-fit: cover;
                         }
 
                         span{
@@ -73,8 +72,8 @@
                     }
 
                     .icons{
-                        width: 40px;
-                        height: 40px;
+                        width: 35px;
+                        height: 35px;
                         background: rgba(17, 25, 40, 0.3);
                         padding: 10px;
                         border-radius: 50%;
@@ -85,9 +84,6 @@
         }
 
         button{
-            display: flex;
-            justify-content: center; 
-            align-items: center;
             padding: 10px 20px;
             background-color: rgba(230, 74, 105, 0.553);
             color: white;
@@ -99,6 +95,11 @@
 
             &:hover{
                 background-color: rgba(220, 20, 60, 0.7);
+            }
+
+            &.logout{
+                padding: 10px;
+                background-color: #1a73e8;              
             }
         }
     }
