--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -20,12 +20,14 @@
             display: flex;
             align-items: center;
             gap: 20px;
+
             img{
                 width: 60px;
                 height: 60px;
                 border-radius: 50%;
                 object-fit: cover;
                 border: 2px solid white;
+                cursor: pointer;
             }
         }
 
@@ -89,6 +91,7 @@
                 height: 30px;
                 border-radius: 50px;
                 object-fit: cover;
+                cursor: pointer;
             }
 
             .texts{
