--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -16,6 +16,7 @@
             border-radius: 50%;
             object-fit: cover;
             border: 2px solid white;
+            cursor: pointer;
         }
     }
 
@@ -75,9 +76,8 @@
                     .icons{
                         width: 35px;
                         height: 35px;
-                        background: rgba(17, 25, 40, 0.3);
+                        --field-color: rgba(66, 66, 92, 0.773);
                         padding: 10px;
-                        border-radius: 50%;
                         cursor: pointer;
                     }
                 }
