--- a/src/components/list/chatList/addUser/addUser.css
+++ b/src/components/list/chatList/addUser/addUser.css
@@ -3,14 +3,13 @@
     width: max-content;
     height: max-content;
     padding: 30px;
-    background-color: rgba(17, 25, 40, 0.75);
+    background-color: rgba(66, 66, 92, 0.9);
     border-radius: 10px;
     position: absolute;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
     margin: auto;
+    transform: translate(100%, 59%);
 
     form{
         display: flex;
@@ -35,7 +34,7 @@
     }
 
     .user{
-        margin-top: 50px;
+        margin-top: 35px;
         display: flex;
         align-items: center;
         justify-content: space-between;
