--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root{
-  --background-image: "./moon.png";
+  --background-image: url("/moon.png");
   --theme-color: rgba(19.6, 20.4, 28.2, 0.7);
 }
 
