--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -151,6 +151,10 @@
             padding: 10px;
             border-radius: 10px;
             font-size: 16px;
+            cursor: pointer;
+            &:disabled{
+                cursor: not-allowed;
+            }
         }
 
         .sendButton{
@@ -160,6 +164,10 @@
             border: none;
             border-radius: 10px;
             cursor: pointer;
+            &:disabled{
+                background-color: #36539d;
+                cursor: not-allowed;
+            }
         }
 
         .emoji{
