--- a/src/components/list/chatList/addUser/addUser.css
+++ b/src/components/list/chatList/addUser/addUser.css
@@ -1,15 +1,20 @@
+:root{
+    --add-color: rgba(66, 66, 92, 0.9);
+}
 .addUser{
     z-index: 9999;
     width: max-content;
     height: max-content;
     padding: 30px;
-    background-color: rgba(66, 66, 92, 0.9);
+    background-color: var(--add-color);
     border-radius: 10px;
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     margin: auto;
-    transform: translate(100%, 59%);
+    
 
     form{
         display: flex;
