--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -66,7 +66,7 @@
     .center{
         padding: 20px;
         flex: 1;
-        overflow: scroll;
+        overflow: auto;
         display: flex;
         flex-direction: column;
         gap: 20px;
