--- a/src/components/list/chatList/chatList.css
+++ b/src/components/list/chatList/chatList.css
@@ -7,7 +7,7 @@
   .search {
     display: flex;
     flex: 1;
-    overflow: scroll;
+    overflow: auto;
     align-items: center;
 
     gap: 20px;
